--- a/css profile/profile.css
+++ b/css profile/profile.css
@@ -88,7 +88,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("https://img.upanh.tv/2025/05/20/16a7920a659a1b01dc237de0c63f3e52.jpg");
+  background-image: url("https://sv1.anhsieuviet.com/2025/06/10/16a7920a659a1b01dc237de0c63f3e52.jpg");
   background-repeat: no-repeat;
   z-index: -1;
   filter: blur(5px);
